force-app/main/default/objects/Compliance_Doc__c/Compliance_Doc__c.object-meta.xml
<CustomObject>
    <label>Compliance Document</label>
    <nameField>
        <label>Compliance_Doc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>