force-app/main/default/objects/Compliance_Doc__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Compliance_Docs</relationshipName>
    <type>Lookup</type>
</CustomField>