force-app/main/default/objects/Compliance_Doc__c/fields/Annual_Caption__c.field-meta.xml
<CustomField>
    <fullName>Annual_Caption__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Annual?</label>
    <type>Checkbox</type>
</CustomField>