force-app/main/default/objects/Compliance_Doc__c/fields/Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Safe ID</label>
    <type>Text</type>
</CustomField>