force-app/main/default/objects/Compliance_Doc__c/fields/Comp_Doc_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Comp_Doc_Case_Safe_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comp Doc Case Safe ID</label>
    <type>Text</type>
</CustomField>