force-app/main/default/objects/Compliance_Doc__c/fields/ConsignmentNote_Code__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentNote_Code__c</fullName>
    <description>Consignment Note Code</description>
    <label>Consignment Note Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>