force-app/main/default/objects/Compliance_Doc__c/fields/ConsignmentNote_PremisesCode__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentNote_PremisesCode__c</fullName>
    <label>Premises Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>