force-app/main/default/objects/Compliance_Doc__c/fields/ConsignmentNote_SpecialHandlingRequests__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentNote_SpecialHandlingRequests__c</fullName>
    <label>Special Handling Requests</label>
    <length>50</length>
    <type>Text</type>
</CustomField>