force-app/main/default/objects/Compliance_Doc__c/fields/ConsignmentNote_UN_Classes__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentNote_UN_Classes__c</fullName>
    <label>UN Classes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>