force-app/main/default/objects/Compliance_Doc__c/fields/ConsignmentNote_UN_Id_Nos__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentNote_UN_Id_Nos__c</fullName>
    <label>UN Identification Numbers</label>
    <length>50</length>
    <type>Text</type>
</CustomField>