force-app/main/default/objects/Compliance_Doc__c/fields/ConsignmentNote_VehicleRegNo__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentNote_VehicleRegNo__c</fullName>
    <label>Vehicle Registration No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>