force-app/main/default/objects/Compliance_Doc__c/fields/ConsignmentNote_WasteProducer__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentNote_WasteProducer__c</fullName>
    <label>Waste Producer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>