force-app/main/default/objects/Compliance_Doc__c/fields/ConsignmentNote_WasteProducerAddress__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentNote_WasteProducerAddress__c</fullName>
    <label>Waste Producer Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>