force-app/main/default/objects/Compliance_Doc__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compliance Documents</relationshipLabel>
    <relationshipName>Compliance_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>