force-app/main/default/objects/Compliance_Doc__c/fields/ContactPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ContactPhoneNumber__c</fullName>
    <formula>Contact__r.Phone</formula>
    <label>Contact Phone Number</label>
    <type>Text</type>
</CustomField>