force-app/main/default/objects/Compliance_Doc__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>Suppliers__c</referenceTo>
    <relationshipName>Compliance_Docs</relationshipName>
    <type>Lookup</type>
</CustomField>