force-app/main/default/objects/Compliance_Doc__c/fields/Enqix_ConsNote_ID__c.field-meta.xml
<CustomField>
    <fullName>Enqix_ConsNote_ID__c</fullName>
    <description>Consignment Note Enqix ID</description>
    <externalId>true</externalId>
    <label>Enqix_ConsNote_ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>