force-app/main/default/objects/Compliance_Doc__c/fields/enqix_sdc_id__c.field-meta.xml
<CustomField>
    <fullName>enqix_sdc_id__c</fullName>
    <externalId>true</externalId>
    <label>enqix_sdc_id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>