force-app/main/default/objects/Compliance_Doc__c/fields/Enqix_wtn_id__c.field-meta.xml
<CustomField>
    <fullName>Enqix_wtn_id__c</fullName>
    <externalId>true</externalId>
    <label>Enqix_wtn_id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>