force-app/main/default/objects/Compliance_Doc__c/fields/EWC_Categories__c.field-meta.xml
<CustomField>
    <fullName>EWC_Categories__c</fullName>
    <label>EWC_Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardboard Waste</fullName>
            </value>
            <value>
                <fullName>Dry Mixed Recycling</fullName>
            </value>
            <value>
                <fullName>Kitchen and canteen food waste</fullName>
            </value>
            <value>
                <fullName>Mixed commercial waste</fullName>
            </value>
            <value>
                <fullName>Printer toner and cartridges</fullName>
            </value>
            <value>
                <fullName>Bulky Waste</fullName>
            </value>
            <value>
                <fullName>Wifgets</fullName>
            </value>
            <value>
                <fullName>Waste stationery equipment</fullName>
            </value>
            <value>
                <fullName>Cooking Oil</fullName>
            </value>
            <value>
                <fullName>Wooden Packaging</fullName>
            </value>
            <value>
                <fullName>Paint containing dangerous substances</fullName>
            </value>
            <value>
                <fullName>Paint not containing dangerous substances</fullName>
            </value>
            <value>
                <fullName>Batteries</fullName>
            </value>
            <value>
                <fullName>Plasterboard</fullName>
            </value>
            <value>
                <fullName>Bulky Items</fullName>
            </value>
            <value>
                <fullName>Mixed office paper</fullName>
            </value>
            <value>
                <fullName>Textiles</fullName>
            </value>
            <value>
                <fullName>sausage and mach</fullName>
            </value>
            <value>
                <fullName>Mixed glass</fullName>
            </value>
            <value>
                <fullName>Fluorescent Tube &amp; Bulbs</fullName>
            </value>
            <value>
                <fullName>Waste CD and media tapes</fullName>
            </value>
            <value>
                <fullName>Waste electronics</fullName>
            </value>
            <value>
                <fullName>Perspex</fullName>
            </value>
            <value>
                <fullName>WOOD PANELS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>