force-app/main/default/objects/Compliance_Doc__c/fields/Generated_on_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Generated_on_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generated on Salesforce</label>
    <type>Checkbox</type>
</CustomField>