force-app/main/default/objects/Compliance_Doc__c/fields/HowIsWasteContained__c.field-meta.xml
<CustomField>
    <fullName>HowIsWasteContained__c</fullName>
    <label>How is waste contained?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>