force-app/main/default/objects/Compliance_Doc__c/fields/HowMuchWaste__c.field-meta.xml
<CustomField>
    <fullName>HowMuchWaste__c</fullName>
    <label>How much waste</label>
    <length>100</length>
    <type>Text</type>
</CustomField>