force-app/main/default/objects/Compliance_Doc__c/fields/IsAccountLive__c.field-meta.xml
<CustomField>
    <fullName>IsAccountLive__c</fullName>
    <formula>Account__r.IsLive__c</formula>
    <label>Account Live?</label>
    <type>Checkbox</type>
</CustomField>