force-app/main/default/objects/Compliance_Doc__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>AND(DATEVALUE(StartDate__c) &lt;= TODAY(), DATEVALUE(EndDate__c) &gt;= TODAY())</formula>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>