force-app/main/default/objects/Compliance_Doc__c/fields/IsTodaySendAnnualWtnEmail__c.field-meta.xml
<CustomField>
    <fullName>IsTodaySendAnnualWtnEmail__c</fullName>
    <formula>DATEVALUE(CreatedDate) + 1 = TODAY()</formula>
    <label>Send Annual WTN Email Today</label>
    <type>Checkbox</type>
</CustomField>