force-app/main/default/objects/Compliance_Doc__c/fields/IsWTNRenewalDue__c.field-meta.xml
<CustomField>
    <fullName>IsWTNRenewalDue__c</fullName>
    <formula>AND(DATEVALUE(EndDate__c) = TODAY() - 1, BEGINS(Name, &apos;Season Ticket WTN&apos;))</formula>
    <label>WTN Renewal Due</label>
    <type>Checkbox</type>
</CustomField>