force-app/main/default/objects/Compliance_Doc__c/fields/MostRecent__c.field-meta.xml
<CustomField>
    <fullName>MostRecent__c</fullName>
    <defaultValue>true</defaultValue>
    <label>MostRecent</label>
    <type>Checkbox</type>
</CustomField>