force-app/main/default/objects/Compliance_Doc__c/fields/One_Off__c.field-meta.xml
<CustomField>
    <fullName>One_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One-Off</label>
    <type>Checkbox</type>
</CustomField>