force-app/main/default/objects/Compliance_Doc__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Compliance Documents</relationshipLabel>
    <relationshipName>Compliance_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>