force-app/main/default/objects/Compliance_Doc__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>