force-app/main/default/objects/Compliance_Doc__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <formula>Account__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent</label>
    <type>Text</type>
</CustomField>