force-app/main/default/objects/Compliance_Doc__c/fields/SectionB_RegdWasteCarrierBrokerDealer__c.field-meta.xml
<CustomField>
    <fullName>SectionB_RegdWasteCarrierBrokerDealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registered Waste Carrier/Broker/Dealer?</label>
    <type>Checkbox</type>
</CustomField>