force-app/main/default/objects/Compliance_Doc__c/fields/SectionB_RegWasteCBB_Number__c.field-meta.xml
<CustomField>
    <fullName>SectionB_RegWasteCBB_Number__c</fullName>
    <label>Registration No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>