force-app/main/default/objects/Compliance_Doc__c/fields/SectionD2_Bkr_PostCode__c.field-meta.xml
<CustomField>
    <fullName>SectionD2_Bkr_PostCode__c</fullName>
    <label>Broker Postcode</label>
    <length>12</length>
    <type>Text</type>
</CustomField>