force-app/main/default/objects/Compliance_Doc__c/fields/SectionD2_Brkr_Address__c.field-meta.xml
<CustomField>
    <fullName>SectionD2_Brkr_Address__c</fullName>
    <label>Broker Address</label>
    <length>310</length>
    <type>LongTextArea</type>
</CustomField>