force-app/main/default/objects/Compliance_Doc__c/fields/SectionD2_Brkr_CompName__c.field-meta.xml
<CustomField>
    <fullName>SectionD2_Brkr_CompName__c</fullName>
    <label>Broker Company Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>