force-app/main/default/objects/Compliance_Doc__c/fields/SectionD2_Brkr_RegNo__c.field-meta.xml
<CustomField>
    <fullName>SectionD2_Brkr_RegNo__c</fullName>
    <label>Broker Registration No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>