force-app/main/default/objects/Compliance_Doc__c/fields/SicCode__c.field-meta.xml
<CustomField>
    <fullName>SicCode__c</fullName>
    <formula>Account__r.Sic</formula>
    <label>Sic Code</label>
    <type>Text</type>
</CustomField>