force-app/main/default/objects/Compliance_Doc__c/fields/Signature_Id__c.field-meta.xml
<CustomField>
    <fullName>Signature_Id__c</fullName>
    <label>Signature_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>