force-app/main/default/objects/Compliance_Doc__c/fields/Signature_Name__c.field-meta.xml
<CustomField>
    <fullName>Signature_Name__c</fullName>
    <label>Signatory Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>