force-app/main/default/objects/Compliance_Doc__c/fields/TheWasteWillBeTakenTo__c.field-meta.xml
<CustomField>
    <fullName>TheWasteWillBeTakenTo__c</fullName>
    <formula>Contractor__r.Address__c</formula>
    <label>The waste will be taken to</label>
    <type>Text</type>
</CustomField>