force-app/main/default/objects/Compliance_Doc__c/fields/TimeStamp_Insert__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp_Insert__c</fullName>
    <label>TimeStamp_Insert</label>
    <type>DateTime</type>
</CustomField>