force-app/main/default/objects/Compliance_Doc__c/fields/TimeStamp_Update__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp_Update__c</fullName>
    <label>TimeStamp_Update</label>
    <type>DateTime</type>
</CustomField>