force-app/main/default/objects/Compliance_Doc__c/fields/WasteHierarchyDeclaration__c.field-meta.xml
<CustomField>
    <fullName>WasteHierarchyDeclaration__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Waste Hierarchy Declaration</label>
    <type>Checkbox</type>
</CustomField>