force-app/main/default/objects/Compliance_Doc__c/fields/WTN_Date_of_Transfer__c.field-meta.xml
<CustomField>
    <fullName>WTN_Date_of_Transfer__c</fullName>
    <formula>TEXT(DATEVALUE(StartDate__c)) + &apos; - &apos; +  TEXT(DATEVALUE(EndDate__c))</formula>
    <label>Date of Transfer</label>
    <type>Text</type>
</CustomField>