force-app/main/default/objects/Compliance_Doc__c/recordTypes/Consignment_Notes.recordType-meta.xml
<RecordType>
    <fullName>Consignment_Notes</fullName>
    <active>true</active>
    <label>Consignment Notes</label>
</RecordType>