force-app/main/default/objects/Compliance_Doc__c/recordTypes/Consignment_Notes_Legacy.recordType-meta.xml
<RecordType>
    <fullName>Consignment_Notes_Legacy</fullName>
    <active>true</active>
    <label>Consignment Notes (Legacy)</label>
</RecordType>