force-app/main/default/objects/Compliance_Doc__c/recordTypes/ConsignmentNote.recordType-meta.xml
<RecordType>
    <fullName>ConsignmentNote</fullName>
    <active>true</active>
    <label>Consignment Note</label>
</RecordType>