force-app/main/default/objects/Compliance_Doc__c/recordTypes/Secure_Destruction_Certificate.recordType-meta.xml
<RecordType>
    <fullName>Secure_Destruction_Certificate</fullName>
    <active>true</active>
    <label>Secure Destruction Certificate</label>
</RecordType>