force-app/main/default/objects/Compliance_Doc__c/recordTypes/Waste_Transfer_Notes_Legacy.recordType-meta.xml
<RecordType>
    <fullName>Waste_Transfer_Notes_Legacy</fullName>
    <active>true</active>
    <description>For WTN&apos;s created by historic system</description>
    <label>Waste Transfer Notes (Legacy)</label>
</RecordType>