force-app/main/default/objects/Compliance_Doc__c/recordTypes/WTN.recordType-meta.xml
<RecordType>
    <fullName>WTN</fullName>
    <active>true</active>
    <label>Waste Transfer Notes</label>
</RecordType>