force-app/main/default/objects/Compliance_Doc__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SectionB_RegdWasteCarrierBrokerDealer__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Compliance_Doc__c.WTN</value>
    </filters>
    <label>All</label>
</ListView>