force-app/main/default/objects/Compliance_Doc__c/listViews/Consignment_Notes.listView-meta.xml
<ListView>
    <fullName>Consignment_Notes</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Compliance_Doc__c.Consignment_Notes</value>
    </filters>
    <label>Consignment Notes</label>
</ListView>