force-app/main/default/objects/Compliance_Doc__c/listViews/Secure_Destruction.listView-meta.xml
<ListView>
    <fullName>Secure_Destruction</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Secure</value>
    </filters>
    <label>Secure Destruction</label>
</ListView>