force-app/main/default/objects/Compliance_Doc__c/listViews/Waste_Transfer_Notes.listView-meta.xml
<ListView>
    <fullName>Waste_Transfer_Notes</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>MostRecent__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Compliance_Doc__c.Consignment_Notes</value>
    </filters>
    <label>Waste Transfer Notes</label>
</ListView>